--- a/Lazztech.Cloud.ClientFacade/Pages/Event/Invites.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Event/Invites.cshtml
@@ -17,36 +17,37 @@
                     <span asp-validation-for="Photo" class="text-danger"></span>
                 </div>
             </div>
-            <input type="hidden" asp-for="Mentor.MentorId" />
+            <input type="hidden" asp-for="Invite.MentorId" />
+            <input type="hidden" asp-for="Invite.MentorInviteId" />
             <div class="form-group">
-                <label asp-for="Mentor.FirstName" class="control-label"></label>
-                <input asp-for="Mentor.FirstName" class="form-control" />
-                <span asp-validation-for="Mentor.FirstName" class="text-danger"></span>
+                <label asp-for="Invite.Mentor.FirstName" class="control-label"></label>
+                <input asp-for="Invite.Mentor.FirstName" class="form-control" />
+                <span asp-validation-for="Invite.Mentor.FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Mentor.LastName" class="control-label"></label>
-                <input asp-for="Mentor.LastName" class="form-control" />
-                <span asp-validation-for="Mentor.LastName" class="text-danger"></span>
+                <label asp-for="Invite.Mentor.LastName" class="control-label"></label>
+                <input asp-for="Invite.Mentor.LastName" class="form-control" />
+                <span asp-validation-for="Invite.Mentor.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Mentor.Description" class="control-label"></label>
-                <input asp-for="Mentor.Description" class="form-control" />
-                <span asp-validation-for="Mentor.Description" class="text-danger"></span>
+                <label asp-for="Invite.Mentor.Description" class="control-label"></label>
+                <input asp-for="Invite.Mentor.Description" class="form-control" />
+                <span asp-validation-for="Invite.Mentor.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Mentor.ProfessionalTitle" class="control-label"></label>
-                <input asp-for="Mentor.ProfessionalTitle" class="form-control" />
-                <span asp-validation-for="Mentor.ProfessionalTitle" class="text-danger"></span>
+                <label asp-for="Invite.Mentor.ProfessionalTitle" class="control-label"></label>
+                <input asp-for="Invite.Mentor.ProfessionalTitle" class="form-control" />
+                <span asp-validation-for="Invite.Mentor.ProfessionalTitle" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Mentor.PhoneNumber" class="control-label"></label>
-                <input asp-for="Mentor.PhoneNumber" class="form-control" />
-                <span asp-validation-for="Mentor.PhoneNumber" class="text-danger"></span>
+                <label asp-for="Invite.Mentor.PhoneNumber" class="control-label"></label>
+                <input asp-for="Invite.Mentor.PhoneNumber" class="form-control" />
+                <span asp-validation-for="Invite.Mentor.PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Mentor.Email" class="control-label"></label>
-                <input asp-for="Mentor.Email" class="form-control" />
-                <span asp-validation-for="Mentor.Email" class="text-danger"></span>
+                <label asp-for="Invite.Mentor.Email" class="control-label"></label>
+                <input asp-for="Invite.Mentor.Email" class="form-control" />
+                <span asp-validation-for="Invite.Mentor.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Submit" class="btn btn-default" />
