--- a/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Mentors/Details.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Admin/EventManagement/Mentors/Details.cshtml
@@ -12,6 +12,9 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.Mentor.MentorId)
+        </dt>
+        <dt>
             @Html.DisplayNameFor(model => model.Mentor.FirstName)
         </dt>
         <dd>
