--- a/Lazztech.Cloud.ClientFacade/Pages/Index.cshtml
+++ b/Lazztech.Cloud.ClientFacade/Pages/Index.cshtml
@@ -4,33 +4,129 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="jumbotron">
-    @*<h1>Landing Page</h1>*@
-    <p class="lead">To make an apple pie from scratch you must first invent the universe.</p>
+
+<div class="row">
+    <div class="col-sm-6 col-lg-3">
+        <div class="widget-simple-chart text-right card-box">
+            <div class="circliful-chart" data-dimension="90" data-text="75%" data-width="5" data-fontsize="14" data-percent="75" data-fgcolor="#3bafda" data-bgcolor="#505A66"></div>
+            <h3 class="text-primary counter m-t-10">5685</h3>
+            <p class="text-muted text-nowrap m-b-10">Daily visitors</p>
+        </div>
+    </div>
+    <!-- end row -->
+
+    <div class="row">
+        <div class="col-lg-6">
+            <div class="card-box">
+                <div class="row">
+                    <div class="col-sm-7">
+                        <div class="row">
+                            <div class="col-6 text-center">
+                                <canvas id="partly-cloudy-day" width="100" height="100"></canvas>
+                            </div>
+                            <div class="col-6">
+                                <h2 class="m-t-0 text-muted"><b>32°</b></h2>
+                                <p class="text-muted">Partly cloudy</p>
+                                <p class="text-muted mb-0">15km/h - 37%</p>
+                            </div>
+                        </div><!-- End row -->
+                    </div>
+                    <div class="col-sm-5">
+                        <div class="row">
+                            <div class="col-4 text-center">
+                                <h4 class="text-muted m-t-0">SAT</h4>
+                                <canvas id="cloudy" width="35" height="35"></canvas>
+                                <h4 class="text-muted">30<i class="wi wi-degrees"></i></h4>
+                            </div>
+                            <div class="col-4 text-center">
+                                <h4 class="text-muted m-t-0">SUN</h4>
+                                <canvas id="wind" width="35" height="35"></canvas>
+                                <h4 class="text-muted">28<i class="wi wi-degrees"></i></h4>
+                            </div>
+                            <div class="col-4 text-center">
+                                <h4 class="text-muted m-t-0">MON</h4>
+                                <canvas id="clear-day" width="35" height="35"></canvas>
+                                <h4 class="text-muted">33<i class="wi wi-degrees"></i></h4>
+                            </div>
+                        </div><!-- end row -->
+                    </div>
+                </div><!-- end row -->
+            </div>
+        </div> <!-- end col -->
+
+        <div class="col-lg-6">
+            <div class="card-box">
+                <div class="row">
+                    <div class="col-sm-7">
+                        <div class="">
+                            <div class="row">
+                                <div class="col-6 text-center">
+                                    <canvas id="snow" width="100" height="100"></canvas>
+                                </div>
+                                <div class="col-6">
+                                    <h2 class="m-t-0 text-muted"><b> 23°</b></h2>
+                                    <p class="text-muted">Partly cloudy</p>
+                                    <p class="text-muted mb-0">15km/h - 37%</p>
+                                </div>
+                            </div><!-- end row -->
+                        </div><!-- weather-widget -->
+                    </div>
+                    <div class="col-sm-5">
+                        <div class="row">
+                            <div class="col-4 text-center">
+                                <h4 class="text-muted m-t-0">SAT</h4>
+                                <canvas id="sleet" width="35" height="35"></canvas>
+                                <h4 class="text-muted">30<i class="wi wi-degrees"></i></h4>
+                            </div>
+                            <div class="col-4 text-center">
+                                <h4 class="text-muted m-t-0">SUN</h4>
+                                <canvas id="fog" width="35" height="35"></canvas>
+                                <h4 class="text-muted">28<i class="wi wi-degrees"></i></h4>
+                            </div>
+                            <div class="col-4 text-center">
+                                <h4 class="text-muted m-t-0">MON</h4>
+                                <canvas id="partly-cloudy-night" width="35" height="35"></canvas>
+                                <h4 class="text-muted">33<i class="wi wi-degrees"></i></h4>
+                            </div>
+                        </div><!-- End row -->
+                    </div> <!-- col-->
+                </div><!-- End row -->
+            </div>
+        </div> <!-- end col -->
+    </div>
+    <!--end row/ WEATHER -->
+
 </div>
 
-@*<div class="container">
-    <div class="row">&nbsp;</div>
-    <div class="row">
-        <div class="col-6">&nbsp;</div>
-        <div class="col-6">
-            User..........<input type="text" id="userInput" />
-            <br />
-            Message...<input type="text" id="messageInput" />
-            <input type="button" id="sendButton" value="Send Message" />
+
+<!-- END wrapper -->
+@*<div class="jumbotron">
+        <p class="lead">To make an apple pie from scratch you must first invent the universe.</p>
+    </div>*@
+
+@*
+        <div class="container">
+        <div class="row">&nbsp;</div>
+        <div class="row">
+            <div class="col-6">&nbsp;</div>
+            <div class="col-6">
+                User..........<input type="text" id="userInput" />
+                <br />
+                Message...<input type="text" id="messageInput" />
+                <input type="button" id="sendButton" value="Send Message" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <hr />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">&nbsp;</div>
+            <div class="col-6">
+                <ul id="messagesList"></ul>
+            </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-12">
-            <hr />
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-6">&nbsp;</div>
-        <div class="col-6">
-            <ul id="messagesList"></ul>
-        </div>
-    </div>
-</div>
-<script src="~/lib/signalr/dist/browser/signalr.js"></script>
-<script src="~/js/chat.js"></script>*@
+    <script src="~/lib/signalr/dist/browser/signalr.js"></script>
+    <script src="~/js/chat.js"></script>*@
